--- a/riscof-plugins/rv64/config.ini
+++ b/riscof-plugins/rv64/config.ini
@@ -1,14 +1,17 @@
 [RISCOF]
-ReferencePlugin=sail_cSim
-ReferencePluginPath=sail_cSim
-DUTPlugin=spike_simple
-DUTPluginPath=spike_simple
+ReferencePlugin=spike_parallel
+ReferencePluginPath=/home/saravana/riscv-arch-test/riscof-plugins/rv64/spike_parallel
+DUTPlugin=spike_parallel
+DUTPluginPath=/home/saravana/riscv-arch-test/riscof-plugins/rv64/spike_parallel
 
-[spike_simple]
-pluginpath=spike_simple
-ispec=spike_simple/spike_simple_isa.yaml
-pspec=spike_simple/spike_simple_platform.yaml
+[spike_parallel]
+pluginpath=spike_parallel
+ispec=/home/saravana/riscv-arch-test/riscof-plugins/rv64/spike_parallel/spike_parallel_isa.yaml
+pspec=/home/saravana/riscv-arch-test/riscof-plugins/rv64/spike_parallel/spike_parallel_platform.yaml
 target_run=1
 
-[sail_cSim]
-pluginpath=sail_cSim
+#[sail_cSim]
+#pluginpath=sail_cSim
+#/home/saravana/riscv-arch-test/riscof-plugins/rv32/sail_cSim
+#/home/saravana/riscv-arch-test/riscof-plugins/rv32/spike_simple
+
